<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="take_note"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_note_short"
        android:shortcutLongLabel="@string/shortcut_note_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.example.offlineassistant"
            android:targetClass="com.example.offlineassistant.MainActivity">
            <extra android:name="shortcut_action" android:value="take_note" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="set_alarm"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_alarm_short"
        android:shortcutLongLabel="@string/shortcut_alarm_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.example.offlineassistant"
            android:targetClass="com.example.offlineassistant.MainActivity">
            <extra android:name="shortcut_action" android:value="set_alarm" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="voice_command"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_voice_short"
        android:shortcutLongLabel="@string/shortcut_voice_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.example.offlineassistant"
            android:targetClass="com.example.offlineassistant.MainActivity">
            <extra android:name="EXTRA_START_VOICE" android:value="true" />
        </intent>
    </shortcut>
</shortcuts>
